more complex graphQL
