# generated/example.pb.gw.go
@@ -28,18 +28,48 @@ var _ status.Status
 var _ = runtime.String
 var _ = utilities.NewDoubleArray
 
-func request_MapsService_GetMaps_0(ctx context.Context, marshaler runtime.Marshaler, client MapsServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_MarkersService_GetMarkers_0(ctx context.Context, marshaler runtime.Marshaler, client MarkersServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq EmptyGet
 	var metadata runtime.ServerMetadata
 
-	msg, err := client.GetMaps(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.GetMarkers(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-// RegisterMapsServiceHandlerFromEndpoint is same as RegisterMapsServiceHandler but
+var (
+	filter_MarkersService_GetMarkersGraphQL_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_MarkersService_GetMarkersGraphQL_0(ctx context.Context, marshaler runtime.Marshaler, client MarkersServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GraphQLQuery
+	var metadata runtime.ServerMetadata
+
+	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_MarkersService_GetMarkersGraphQL_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetMarkersGraphQL(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func request_MarkersService_GetMarkersGraphQL_1(ctx context.Context, marshaler runtime.Marshaler, client MarkersServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GraphQLQuery
+	var metadata runtime.ServerMetadata
+
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.GetMarkersGraphQL(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+// RegisterMarkersServiceHandlerFromEndpoint is same as RegisterMarkersServiceHandler but
 // automatically dials to "endpoint" and closes the connection when "ctx" gets done.
-func RegisterMapsServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
+func RegisterMarkersServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.ServeMux, endpoint string, opts []grpc.DialOption) (err error) {
 	conn, err := grpc.Dial(endpoint, opts...)
 	if err != nil {
 		return err
@@ -59,15 +89,15 @@ func RegisterMapsServiceHandlerFromEndpoint(ctx context.Context, mux *runtime.Se
 		}()
 	}()
 
-	return RegisterMapsServiceHandler(ctx, mux, conn)
+	return RegisterMarkersServiceHandler(ctx, mux, conn)
 }
 
-// RegisterMapsServiceHandler registers the http handlers for service MapsService to "mux".
+// RegisterMarkersServiceHandler registers the http handlers for service MarkersService to "mux".
 // The handlers forward requests to the grpc endpoint over "conn".
-func RegisterMapsServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
-	client := NewMapsServiceClient(conn)
+func RegisterMarkersServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn *grpc.ClientConn) error {
+	client := NewMarkersServiceClient(conn)
 
-	mux.Handle("GET", pattern_MapsService_GetMaps_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("GET", pattern_MarkersService_GetMarkers_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(ctx)
 		defer cancel()
 		if cn, ok := w.(http.CloseNotifier); ok {
@@ -85,14 +115,72 @@ func RegisterMapsServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_MapsService_GetMaps_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_MarkersService_GetMarkers_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_MapsService_GetMaps_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_MarkersService_GetMarkers_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_MarkersService_GetMarkersGraphQL_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(ctx)
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MarkersService_GetMarkersGraphQL_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_MarkersService_GetMarkersGraphQL_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_MarkersService_GetMarkersGraphQL_1, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(ctx)
+		defer cancel()
+		if cn, ok := w.(http.CloseNotifier); ok {
+			go func(done <-chan struct{}, closed <-chan bool) {
+				select {
+				case <-done:
+				case <-closed:
+					cancel()
+				}
+			}(ctx.Done(), cn.CloseNotify())
+		}
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MarkersService_GetMarkersGraphQL_1(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_MarkersService_GetMarkersGraphQL_1(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -100,9 +188,17 @@ func RegisterMapsServiceHandler(ctx context.Context, mux *runtime.ServeMux, conn
 }
 
 var (
-	pattern_MapsService_GetMaps_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"map"}, ""))
+	pattern_MarkersService_GetMarkers_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"markers"}, ""))
+
+	pattern_MarkersService_GetMarkersGraphQL_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"graphql"}, ""))
+
+	pattern_MarkersService_GetMarkersGraphQL_1 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"graphql"}, ""))
 )
 
 var (
-	forward_MapsService_GetMaps_0 = runtime.ForwardResponseMessage
+	forward_MarkersService_GetMarkers_0 = runtime.ForwardResponseMessage
+
+	forward_MarkersService_GetMarkersGraphQL_0 = runtime.ForwardResponseMessage
+
+	forward_MarkersService_GetMarkersGraphQL_1 = runtime.ForwardResponseMessage
 )
